--- a/html-css/module-11/src/sass/helpers/mixins.scss
+++ b/html-css/module-11/src/sass/helpers/mixins.scss
@@ -9,3 +9,8 @@
   font-size: $size;
   line-height: $height;
 }
+
+@mixin pseudo($display: block, $content: "") {
+  display: $display;
+  content: $content;
+}
