--- a/html-css/module-11/src/sass/components/header/banner.scss
+++ b/html-css/module-11/src/sass/components/header/banner.scss
@@ -3,21 +3,22 @@
   margin: 0 auto;
 
   &__templ {
+    @extend %prg;
     margin-bottom: 60px;
     font-family: $section-tittle-font;
-    font-size: 72px;
-    line-height: 86px;
+    @include font-settings (72px, 86px);
   }
 
   &__main {
+    @extend %prg;
     margin-bottom: 110px;
     font-weight: bold;
-    font-size: 150px;
-    line-height: 150px;
+    @include font-settings (150px, 150px);
   }
 }
 
 .button__banner {
+  @extend %btn;
   border: 3px solid #fff;
   height: 40px;
   width: 160px;
