--- a/html-css/module-11/src/sass/components/main/social-icons.scss
+++ b/html-css/module-11/src/sass/components/main/social-icons.scss
@@ -14,6 +14,11 @@
   justify-content: space-between;
   min-width: 226px;
   height: 55px;
+  @extend %list;
+}
+
+.social-icons__item {
+  @extend %item;
 }
 
 .social-icons__link {
@@ -21,6 +26,7 @@
   height: 55px;
   display: flex;
   align-items: center;
+  @extend %link;
   background-position: center;
   background-repeat: no-repeat;
   background-color: $hover-text-color;
